fixtures/parser/valid/namespaces.php
<?php

namespace Vendor\Package {
    function inside(): void {
        echo "inside";
    }
}

namespace {
    echo "global";
}
